--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"multer": "^1.4.5-lts.1",
 		"multer-gridfs-storage": "^5.0.2",
 		"nodemon": "^3.1.9",
-		"razorpay": "^2.9.5"
+		"razorpay": "^2.9.5",
+		"uid": "^2.0.2"
 	}
 }
