--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"mongoose": "^8.9.2",
 		"multer": "^1.4.5-lts.1",
 		"multer-gridfs-storage": "^5.0.2",
+		"nodemailer": "^6.10.0",
 		"nodemon": "^3.1.9",
 		"razorpay": "^2.9.5",
 		"uid": "^2.0.2"
