--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"nodemailer": "^6.10.0",
 		"nodemon": "^3.1.9",
 		"razorpay": "^2.9.5",
-		"uid": "^2.0.2"
+		"uid": "^2.0.2",
+		"winston": "^3.17.0"
 	}
 }
